yeeeeee, finally working everything