@@ -11,7 +11,7 @@ import java.util.List;
 public class Scene {
     private List<ModelWrapper> objects;
     private List<Light> lights;
-    private  List<Camera> cameras;
+    private List<Camera> cameras;
     private Camera currentCamera;
     private RenderEngine.RenderSettings renderSettings;
 
@@ -20,7 +20,7 @@ public class Scene {
         this.lights = new ArrayList<>();
         this.cameras = new ArrayList<>();
         this.cameras.add(new Camera(
-                new Vector3f(0, 5, 10),
+                new Vector3f(0, 0, 100),
                 new Vector3f(0, 0, 0),
                 1.0F,
                 1,
@@ -30,7 +30,7 @@ public class Scene {
                 "mainCam"
                 )
         );
-        this.currentCamera = this.cameras.get(0);
+        this.currentCamera = this.cameras.getFirst();
         }
 
     // Getters
@@ -89,17 +89,6 @@ public class Scene {
 
     public  void  addCamera(Camera camera) {
         this.cameras.add(camera);
-    }
-
-    // Wrappers
-
-    public static class CameraWrapper {
-        String name;
-        Camera camera;
-        public CameraWrapper(String name, Camera camera) {
-            this.name = name;
-            this.camera = camera;
-        }
     }
 
 }
